--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
+    "markdown-to-jsx": "^7.4.0",
     "mui-markdown": "^1.1.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
